Fixed minor UI bug with the comment section having to much of a gap between comments

--- a/social-proof-section-master/src/css/_CommentSection.scss
+++ b/social-proof-section-master/src/css/_CommentSection.scss
@@ -8,9 +8,10 @@
   .comment-section {
     justify-content: space-between;
     grid-column: span 2;
-    grid-template-columns: repeat(3, minmax(100px, 400px));
+    grid-template-columns: repeat(3, minmax(100px, auto));
     grid-template-rows: repeat(2, 2rem) auto repeat(2, 2rem);
-    grid-gap: 0;
+    grid-row-gap: 0;
+    grid-column-gap: 1rem;
     margin: 0;
   }
   .comment {
