--- a/social-proof-section-master/src/css/main.css
+++ b/social-proof-section-master/src/css/main.css
@@ -125,11 +125,12 @@
         -ms-flex-pack: justify;
             justify-content: space-between;
     grid-column: span 2;
-    -ms-grid-columns: (minmax(100px, 400px))[3];
-        grid-template-columns: repeat(3, minmax(100px, 400px));
+    -ms-grid-columns: (minmax(100px, auto))[3];
+        grid-template-columns: repeat(3, minmax(100px, auto));
     -ms-grid-rows: (2rem)[2] auto (2rem)[2];
         grid-template-rows: repeat(2, 2rem) auto repeat(2, 2rem);
-    grid-gap: 0;
+    grid-row-gap: 0;
+    grid-column-gap: 1rem;
     margin: 0;
   }
   .comment:first-child {
